notes updated